[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "tbl"
version = "0.0.3"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "db table wrapper"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "jsonpickle",
  "simplejson",
  # "dbcq @ git+https://github.com/numlims/dbcq"
  "dbcq @ https://github.com/numlims/dbcq/archive/refs/tags/v0.0.4.zip",
]
classifiers = [
  "Programming Language :: Python :: 3"
]
[project.scripts]
tbl = "tbl:__main__"

[tool.setuptools]
packages = ["tbl"]